@@ -165,3 +165,7 @@ Alpha 0.23
 - OpenBSD ripd is now fully manageable with BSDRouterd
 -- Implement ip rip authentication mode none,text,md5 for each interface
 -- Implement ip rip authentication key-string for each interface
+
+Alpha 0.24 - prev
+- Change show ip route to a CISCO intepretation
+- Reload ospfd & ripd only when daemon is started
